--- a/.github/workflows/valid-pr-action.yml
+++ b/.github/workflows/valid-pr-action.yml
@@ -27,3 +27,8 @@ jobs:
           source .venv/bin/activate
           export PYTHONPATH=${{ github.workspace }}
           pytest tests/
+      - name: Run coverage
+        run: |
+          source .venv/bin/activate
+          export PYTHONPATH=${{ github.workspace }}
+          pytest --cov=src
