--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ pre-commit-hooks = "^5.0.0"
 pre-commit = "^4.0.1"
 autoflake = "^2.3.1"
 assertpy = "^1.1"
+pytest-cov = "^5.0.0"
 
 
 [build-system]
