--- a/.github/workflows/valid-pr-action.yml
+++ b/.github/workflows/valid-pr-action.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           source .venv/bin/activate
           export PYTHONPATH=${{ github.workspace }}
-          pytest tests/
+          pytest -vs tests/
       - name: Run coverage
         run: |
           source .venv/bin/activate
