--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ pre-commit = "^4.0.1"
 autoflake = "^2.3.1"
 assertpy = "^1.1"
 pytest-cov = "^5.0.0"
+flask = "^3.1.1"
+requests = "^2.32.3"
+pydantic = "^2.11.5"
 
 
 [build-system]
