--- a/.github/workflows/valid-pr-action.yml
+++ b/.github/workflows/valid-pr-action.yml
@@ -1,3 +1,4 @@
+
 name: ValidatePullRequestCode
 on:
   pull_request:
@@ -22,6 +23,14 @@ jobs:
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
+      - name: Run Flask application
+        run: |
+          source .venv/bin/activate
+          export PYTHONPATH=${{ github.workspace }}
+          export FLASK_APP=src/spacebattle/core/endpoint.py
+          flask run --port=5000 &
+          echo $! > flask.pid
+          sleep 5
       - name: Run tests
         run: |
           source .venv/bin/activate
@@ -32,3 +41,6 @@ jobs:
           source .venv/bin/activate
           export PYTHONPATH=${{ github.workspace }}
           pytest --cov=src
+      - name: Stop Flask application
+        run: |
+          kill $(cat flask.pid)
