--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ pytest-cov = "^5.0.0"
 flask = "^3.1.1"
 requests = "^2.32.3"
 pydantic = "^2.11.5"
+jwt = "^1.3.1"
+flask-jwt-extended = "^4.7.1"
 
 
 [build-system]
