--- a/.github/workflows/valid-pr-action.yml
+++ b/.github/workflows/valid-pr-action.yml
@@ -23,13 +23,17 @@ jobs:
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
-      - name: Run Flask application
+      - name: Run both Flask applications
         run: |
           source .venv/bin/activate
           export PYTHONPATH=${{ github.workspace }}
+
           export FLASK_APP=src/spacebattle/core/endpoint.py
           flask run --port=5000 &
-          echo $! > flask.pid
+          echo $! > flask_endpoint.pid
+          export FLASK_APP=src/spacebattle/core/identity.py
+          flask run --port=5001 & 
+          echo $! > flask_identity.pid
           sleep 5
       - name: Run tests
         run: |
@@ -43,4 +47,5 @@ jobs:
           pytest --cov=src
       - name: Stop Flask application
         run: |
-          kill $(cat flask.pid)
+          kill $(cat flask_endpoint.pid) || true
+          kill $(cat flask_identity.pid) || true
