--- a/.github/workflows/valid-pr-action.yml
+++ b/.github/workflows/valid-pr-action.yml
@@ -1,18 +1,40 @@
-
 name: ValidatePullRequestCode
+
 on:
   pull_request:
     branches: [main]
+
 jobs:
   RunTests:
     runs-on: ubuntu-latest
+    services:
+      identity_service:
+        image: python:3.11-slim
+        ports:
+          - "5001:5001"
+        volumes:
+          - ./:/app
+        working-directory: /app
+        env:
+          FLASK_APP: src/spacebattle/core/identity.py
+        options: >-
+          --health-cmd "curl -f http://localhost:5001/api/auth/token || exit 1"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        steps:
+          - run: pip install flask flask-jwt-extended
+          - run: flask run --port=5001 --host=0.0.0.0
+
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+        
       - name: Set up python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11.8"
+          
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -20,32 +42,32 @@ jobs:
           virtualenvs-in-project: true
           virtualenvs-path: .venv
           installer-parallel: true
+          
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
-      - name: Run both Flask applications
+        
+      - name: Run Flask endpoint application
         run: |
           source .venv/bin/activate
           export PYTHONPATH=${{ github.workspace }}
-
           export FLASK_APP=src/spacebattle/core/endpoint.py
           flask run --port=5000 &
           echo $! > flask_endpoint.pid
-          export FLASK_APP=src/spacebattle/core/identity.py
-          flask run --port=5001 & 
-          echo $! > flask_identity.pid
           sleep 5
+          
       - name: Run tests
         run: |
           source .venv/bin/activate
           export PYTHONPATH=${{ github.workspace }}
           pytest -vs tests/
+          
       - name: Run coverage
         run: |
           source .venv/bin/activate
           export PYTHONPATH=${{ github.workspace }}
           pytest --cov=src
-      - name: Stop Flask application
+          
+      - name: Stop Flask endpoint application
         run: |
           kill $(cat flask_endpoint.pid) || true
-          kill $(cat flask_identity.pid) || true
