--- a/.github/workflows/valid-pr-action.yml
+++ b/.github/workflows/valid-pr-action.yml
@@ -7,34 +7,39 @@ on:
 jobs:
   RunTests:
     runs-on: ubuntu-latest
-    services:
-      identity_service:
-        image: python:3.11-slim
-        ports:
-          - "5001:5001"
-        volumes:
-          - ./:/app
-        working-directory: /app
-        env:
-          FLASK_APP: src/spacebattle/core/identity.py
-        options: >-
-          --health-cmd "curl -f http://localhost:5001/api/auth/token || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        steps:
-          - run: pip install flask flask-jwt-extended
-          - run: flask run --port=5001 --host=0.0.0.0
 
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-        
+
       - name: Set up python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11.8"
-          
+
+      - name: Install Docker
+        uses: docker/setup-qemu-action@v3
+        uses: docker/setup-buildx-action@v3
+        uses: docker/login-action@v3
+
+      - name: Start Identity Service
+        run: |
+          docker run -d \
+            --name identity_service \
+            -p 5001:5001 \
+            -v $PWD:/app \
+            -w /app \
+            -e FLASK_APP=src/spacebattle/core/identity.py \
+            python:3.11-slim \
+            sh -c "pip install flask flask-jwt-extended && flask run --port=5001 --host=0.0.0.0"
+
+      - name: Wait for Identity Service
+        run: |
+          until curl -f http://localhost:5001/api/auth/token; do
+            echo "Waiting for identity service to start..."
+            sleep 5
+          done
+
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -42,11 +47,11 @@ jobs:
           virtualenvs-in-project: true
           virtualenvs-path: .venv
           installer-parallel: true
-          
+
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
-        
+
       - name: Run Flask endpoint application
         run: |
           source .venv/bin/activate
@@ -55,19 +60,21 @@ jobs:
           flask run --port=5000 &
           echo $! > flask_endpoint.pid
           sleep 5
-          
+
       - name: Run tests
         run: |
           source .venv/bin/activate
           export PYTHONPATH=${{ github.workspace }}
           pytest -vs tests/
-          
+
       - name: Run coverage
         run: |
           source .venv/bin/activate
           export PYTHONPATH=${{ github.workspace }}
           pytest --cov=src
-          
-      - name: Stop Flask endpoint application
+
+      - name: Cleanup
         run: |
           kill $(cat flask_endpoint.pid) || true
+          docker stop identity_service || true
+          docker rm identity_service || true
