--- a/.github/workflows/valid-pr-action.yml
+++ b/.github/workflows/valid-pr-action.yml
@@ -17,10 +17,8 @@ jobs:
         with:
           python-version: "3.11.8"
 
-      - name: Install Docker
-        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker
         uses: docker/setup-buildx-action@v3
-        uses: docker/login-action@v3
 
       - name: Start Identity Service
         run: |
@@ -35,7 +33,7 @@ jobs:
 
       - name: Wait for Identity Service
         run: |
-          until curl -f http://localhost:5001/api/auth/token; do
+          until curl -f http://localhost:5001/api/auth/token || [ $? -eq 22 ]; do
             echo "Waiting for identity service to start..."
             sleep 5
           done
@@ -49,7 +47,6 @@ jobs:
           installer-parallel: true
 
       - name: Install dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
 
       - name: Run Flask endpoint application
